<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp">

        <ImageView
            android:id="@+id/cancelbutton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/cross"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/yeartext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/select_year"
            android:textColor="@color/black"
            android:textSize="20sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/yeartext">

            <RadioButton
                android:id="@+id/radiofirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:text="@string/first_year" />

            <RadioButton
                android:id="@+id/radioother"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/other_year" />
        </RadioGroup>

        <TextView
            android:id="@+id/simpletextavhalltime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/enter_timing_for_av_hall_availability"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radiogroup" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/starttimeselectbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Select Start Time"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/simpletextavhalltime"
            app:layout_constraintTop_toBottomOf="@+id/simpletextavhalltime" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/endtimeselectbutton"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:text="Select End Time"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/starttimeselectbutton"
            app:layout_constraintStart_toStartOf="@+id/starttimeselectbutton"
            app:layout_constraintTop_toBottomOf="@+id/starttimeselectbutton" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/starttimetextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="12:00"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/starttimeselectbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/starttimeselectbutton"
            app:layout_constraintTop_toTopOf="@+id/starttimeselectbutton" />

        <TextView
            android:id="@+id/endtimetextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="12:00"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/endtimeselectbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/endtimeselectbutton"
            app:layout_constraintTop_toBottomOf="@+id/starttimeselectbutton"
            app:layout_constraintVertical_bias="0.476" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/lunchtimebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Select Lunch Time"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/endtimeselectbutton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/starttimeselectbutton"
            app:layout_constraintTop_toBottomOf="@+id/endtimeselectbutton" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lunchtimetextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="12:00"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/lunchtimebutton"
            app:layout_constraintEnd_toEndOf="@+id/endtimetextview"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/lunchtimebutton"
            app:layout_constraintTop_toTopOf="@+id/lunchtimebutton"
            app:layout_constraintVertical_bias="0.428" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/donebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/done"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lunchtimebutton" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
